feat: add social preview image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/src/Icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samuel Vega | Software Engineer</title>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.samuel-v.dev/">
+    <meta property="og:title" content="Samuel Vega | Software Engineer">
+    <meta property="og:description" content="Portfolio profesional de Samuel Vega. Desarrollador enfocado en soluciones web y técnicas.">
+    <meta property="og:image" content="https://www.samuel-v.dev/preview.png">
   </head>
   <body>
     <div id="root"></div>
